--- a/src/main/resources/templates/songs.html
+++ b/src/main/resources/templates/songs.html
@@ -13,11 +13,10 @@
         <th>Audio</th>
     </tr>
     <tr th:each="song : ${songs}">
-        <td th:text="${
-song.id
-}">ID</td>
+        <td th:text="${song.id}">ID</td>
         <td th:text="${song.songName}">Song Name</td>
         <td th:text="${song.songYear}">Song Year</td>
+        <td><img th:src="${song.photoFilePath}" alt="Album Photo" width="50" height="50"></td>
         <td>
             <audio controls>
                 <source th:src="${song.audioFilePath}" type="audio/mpeg">
